# yadq

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  annotated.html  classQuaternion.html  classes.html  classyadq_1_1dualquaternion-members.html  classyadq_1_1dualquaternion.html  classyadq_1_1quaternion-members.html  classyadq_1_1quaternion.html  classyadq_1_1quaternionU-members.html  classyadq_1_1quaternionU.html  dir_20d637da42d3560d9b1416ddc1aa3be8.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_d44c64559bbebec7f509842c48db8b23.html  dual__quaternion_8hpp.html  dual__quaternion_8hpp_source.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  index.html  main.cpp  main__page_8dox.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  namespaceyadq.html  quaternion.h  (+14 more)
.github/: CODEOWNERS
.github/workflows/: cmake.yml  doxygen.yml
docs/: main_page.dox
include/: dual_quaternion.hpp  quaternion.hpp  yadq_type_traits.hpp
include/yadq/: dual_quaternion.hpp  quaternion.hpp  yadq_type_traits.hpp
include/yadq/impl/: quaternion.tpp
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_5.js  all_6.js  all_9.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  files_2.js  files_3.js  functions_1.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  (+2 more)
src/: main.cpp
tests/: dual_quaternion_test.cpp  quaternion_test.cpp
